fix(carousals): responsiveness on mobile and on middle screen

--- a/src/components/audio-player/audio-player-controls.scss
+++ b/src/components/audio-player/audio-player-controls.scss
@@ -141,6 +141,9 @@
   left: 0;
   right: 0;
   top: 0;
+  @media screen and (max-width: 500px){
+    z-index: 10000;
+  }
   width: 100%;
   background: white;
 
